[package]
name = "lisp_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derivative = "2.2.0"
inquire = "0.6.2"
lazy_static = "1.4.0"
literally = "0.1.3"
nom = "7.1.3"
thiserror = "1.0.56"
